--- a/nginx/server.conf
+++ b/nginx/server.conf
@@ -16,7 +16,8 @@ server {
         proxy_pass http://back:8080;
 
         add_header Access-Control-Allow-Origin '*';
-        add_header Access-Control-Allow-Headers 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,token';
+        add_header Access-Control-Allow-Headers 'DNT, X-CustomHeader, Keep-Alive, User-Agent, X-Requested-With, If-Modified-Since, Cache-Control, Content-Type, token';
+        add_header Access-Control-Allow-Methods 'GET, POST, DELETE';
 
     }
 
