--- a/nginx/server.conf
+++ b/nginx/server.conf
@@ -17,7 +17,7 @@ server {
 
         add_header Access-Control-Allow-Origin '*';
         add_header Access-Control-Allow-Headers 'DNT, X-CustomHeader, Keep-Alive, User-Agent, X-Requested-With, If-Modified-Since, Cache-Control, Content-Type, token';
-        add_header Access-Control-Allow-Methods 'GET, POST, DELETE';
+        add_header Access-Control-Allow-Methods 'GET, POST, DELETE, PUT';
 
     }
 
